--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
     <div class="nav-bar">
         <div class="logo">Snapshot</div>
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#" class="link">Home</a></li>
+            <li><a href="#" class="link">About</a></li>
+            <li><a href="#" class="link">Gallery</a></li>
+            <li><a href="#" class="link">Contact</a></li>
         </ul>
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
     </div>
 
     <!-- Hero section -->
@@ -84,7 +89,7 @@
             </div>
         </div>
     </div>
-
+<script src="script.js"></script>
     <!-- Footer section -->
     <div class="footer">
         <div class="footer-content">
